[package]
name = "ss13-whitelist-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "mysql" ] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "io-util"] }
